--- a/index.html
+++ b/index.html
@@ -1,97 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>后台主页</title>
-    <!-- 导入 layui 的样式表 -->
-    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
-    <!-- 导入第三方图标库 -->
-    <link rel="stylesheet" href="/assets/fonts/iconfont.css" />
-    <!-- 导入自己的样式表 -->
-    <link rel="stylesheet" href="/assets/css/index.css" />
-  </head>
-  <body class="layui-layout-body">
-    <div class="layui-layout layui-layout-admin">
-      <div class="layui-header">
-        <div class="layui-logo">
-          <img src="/assets/images/logo.png" alt="" />
-        </div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
-        <ul class="layui-nav layui-layout-right">
-          <li class="layui-nav-item">
-            <a href="javascript:;" class="userinfo">
-              <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-              <span class="text-avatar">A</span>
-              个人中心
-            </a>
-            <dl class="layui-nav-child">
-              <dd><a href="">基本资料</a></dd>
-              <dd><a href="">更换头像</a></dd>
-              <dd><a href="">重置密码</a></dd>
-            </dl>
-          </li>
-          <li class="layui-nav-item">
-            <a href=""><span class="iconfont icon-tuichu"></span>退出</a>
-          </li>
-        </ul>
-      </div>
 
-      <div class="layui-side layui-bg-black">
-        <div class="layui-side-scroll">
-          <div class="userinfo">
-            <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-            <span class="text-avatar">A</span>
-            <span id="welcome">欢迎 ***</span>
-          </div>
-          <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-          <ul class="layui-nav layui-nav-tree" lay-shrink="all">
-            <li class="layui-nav-item layui-this">
-              <a href="/home/dashboard.html" target="fm"><span class="iconfont icon-home"></span>首页</a>
-            </li>
-            <li class="layui-nav-item">
-              <a class="" href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
-              <dl class="layui-nav-child">
-                <dd>
-                  <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a>
-                </dd>
-                <dd>
-                  <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a>
-                </dd>
-                <dd>
-                  <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发布文章</a>
-                </dd>
-              </dl>
-            </li>
-            <li class="layui-nav-item">
-              <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
-              <dl class="layui-nav-child">
-                <dd>
-                  <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>基本资料</a>
-                </dd>
-                <dd>
-                  <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>更换头像</a>
-                </dd>
-                <dd>
-                  <a href="javascript:;"><i class="layui-icon layui-icon-app"></i>重置密码</a>
-                </dd>
-              </dl>
-            </li>
-          </ul>
-        </div>
-      </div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="assets/lib/layui/css/layui.css">
+    <script src="./assets/lib/jquery.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="./assets/lib/layui/layui.all.js"></script>
+    <script src="./assets/js/baseAPI.js"></script>
 
-      <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <iframe name="fm" src="/home/dashboard.html" frameborder="0"></iframe>
-      </div>
+</head>
 
-      <div class="layui-footer">
-        <!-- 底部固定区域 -->
-        © www.itheima.com - 黑马程序员
-      </div>
+<body>
+    <div class="layui-main">
+        <img src="assets/images/logo.png" alt="">
     </div>
-    <!-- 导入 layui 的JS文件 -->
-    <script src="/assets/lib/layui/layui.all.js"></script>
-  </body>
+    <div class="login_1">
+        <div class="title_box"></div>
+        <!-- 这个是登陆页面 -->
+        <div class="login_box">
+            <form class="layui-form" id="form_login">
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input" />
+                </div>
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit
+                        lay-filter="formDemo">登录</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;">去注册登录</a>
+                </div>
+            </form>
+        </div>
+        <!-- 这个是注册页面 -->
+        <div class="reg_box">
+            <form class="layui-form" id="form_reg">
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i>
+                    <input type="text" name="username" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input" />
+                </div>
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i>
+                    <input type="password" name="password" required lay-verify="required|pwd|repwd"
+                        placeholder="请再次输入密码" autocomplete="off" class="layui-input">
+                </div>
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit
+                        lay-filter="formDemo">注册</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;" id="link_login">去登录</a>
+                </div>
+            </form>
+        </div>
+
+    </div>
+
+</body>
+
 </html>
